HTM-1366: replace SearchIndex#comment with SearchIndex#summary in datamodel and persistence
